ajustando media queres

--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -188,3 +188,8 @@ html {
     transform: translateX(10px);
     transition: all 0.3s ease-in-out;
 }
+
+@media (max-width: 450px) {
+	.cabecalho{display: inline-block ;}
+	.logo {display: flex;}
+}
